--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=tapLamWeb
+spring.jpa.hibernate.ddl-auto=update
 # MySQL Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
 spring.datasource.username=root
