--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.datasource.username=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.security.user.name=trungad
-spring.security.user.password=123456
+spring.security.user.name='trungad'
+spring.security.user.password="123456"
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
 # spring.mvc.view.suffix=.jsp
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=50MB
+# application.properties
+
