--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.username=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thapcao2005@gmail.com
+spring.mail.password=nakaroth1411
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
