--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=thapcao2005@gmail.com
-spring.mail.password=wykxmnkwlziixguz
+spring.mail.password=tqlgxzngxfwsruvz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -26,3 +26,5 @@ spring.session.jdbc.initialize-schema=always
 #server.servlet.session.timeout
 #spring.session.jdbc.table-name=SPRING_SESSION
 
+# Bật chế độ debug chi tiết cho việc gửi mail
+spring.mail.properties.mail.debug=true
