--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,15 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.5.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
